<resources>
    <string name="app_name">Secovo</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="home">Inicio</string>

    <string name="abtus">Sobre nosotros</string>
    <string name="profile">Perfil</string>
    <string name="config">Configuración</string>
    <string name="events">Eventos</string>
    <string name="grps">Grupos</string>
    <string name="logout">Cerrar sesión</string>

    <string-array name="spinner_events">
        <item>EVENTOS</item>
        <item>Mis eventos</item>
        <item>Calendario</item>
        <item>Historial</item>
        <item>Mapa</item>
    </string-array>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nombre</string>
    <string name="nav_header_subtitle">Correo electrónico</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_events">Eventos</string>
    <string name="menu_myevents">Mis eventos</string>
    <string name="menu_calendar">Calendario</string>
    <string name="menu_history">Historial</string>
    <string name="menu_map">Mapa</string>
    <string name="menu_contact_us">Contáctanos</string>
    <string name="menu_groups">Grupos</string>
    <string name="destacadosH">Destacados</string>

    <string name="abtusInfo">SECOVO (Servicio Comunitario por el Voluntariado) es una comunidad que busca cuidar y preservar el medio ambiente, animando a las personas a que sean partícipes de brigadas o movimientos para limpiar zonas, ir en contra de la deforestación y de la construcción excesiva de viviendas, entre otras actividades de apoyo hacia la naturaleza. </string>
    <string name="personal_data">Datos personales</string>

    <string name="btnSave">Guardar</string>
    <string name="btnCancel">Cancelar</string>
    <string name="eventDetails">Detalles</string>
    <string name="join">Unirse</string>
    <string name="report">Reportar</string>
    <string name="eventsHistory">Historial de eventos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>