<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.firelogin.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <!--fragment
        android:id="@+id/nav_profile"
        android:name="com.example.firelogin.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/settings_personaldata" /-->

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.firelogin.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/navEv_events"
        android:name="com.example.firelogin.ui.events.EventsFragment"
        android:label="@string/menu_events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navEv_myevents"
        android:name="com.example.firelogin.ui.myevents.MyEventsFragment"
        android:label="@string/menu_myevents"
        tools:layout="@layout/fragment_my_events" />

    <fragment
        android:id="@+id/navEv_calendar"
        android:name="com.example.firelogin.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/navEv_history"
        android:name="com.example.firelogin.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navEv_map"
        android:name="com.example.firelogin.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/contactus"
        android:name="com.example.firelogin.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact_us"
        tools:layout="@layout/fragment_contact_us" />

</navigation>