<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#082B11" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp">

        <Button
            android:id="@+id/btnLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="16sp"
            tools:layout_marginHorizontal="25dp"
            android:textColor="@color/red" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_data"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="38dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="30dp"
        android:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nombre(s): "
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="12dp" />

    <TextView
        android:id="@+id/surnames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apellido(s): "
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha de nacimiento: "
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Correo: "
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="30dp" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_marginHorizontal="30dp"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@color/black"
            android:layout_marginHorizontal="30dp"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>